--- a/src/gui/MainScreen.module.css
+++ b/src/gui/MainScreen.module.css
@@ -1,3 +1,17 @@
-.message {
+.container {
 	margin: 10px;
+	display: flex;
+	flex-direction: row;
+}
+
+.pane {
+	display: flex;
+	flex: 1;
+	margin-right: 10px;
+	margin-left: 10px;
+}
+
+.preview {
+	height: 50vh;
+	background-color: darkgray;
 }
