--- a/src/gui/MainScreen.module.css
+++ b/src/gui/MainScreen.module.css
@@ -9,6 +9,18 @@
 	flex-direction: row;
 }
 
+.leftColumn {
+	border-width: 0 1px 0 0;
+	border-style: solid;
+	border-color: gray;
+}
+
+.rightColumn {
+	border-width: 0 0 0 1px;
+	border-style: solid;
+	border-color: gray;
+}
+
 .column {
 	width: 50%;
 }
