Adding chapter name mockup

--- a/src/gui/components/widgets/NavBar.module.css
+++ b/src/gui/components/widgets/NavBar.module.css
@@ -7,9 +7,16 @@
 	border-color: darkgray;
 	box-shadow: inset 8px 8px 8px rgba(0, 0, 0, 0.075),
 		0 0 8px rgba(200, 200, 200, 0.6);
-	font-family: "Roboto Mono";
+	font-family: "Courier New", Courier, monospace;
 	user-select: none;
 
 	display: flex;
-	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	font-size: small;
+}
+
+.item {
+	display: flex;
+	margin: 1px 8px 1px 8px;
 }
