--- a/src/gui/components/widgets/ProgressList.module.css
+++ b/src/gui/components/widgets/ProgressList.module.css
@@ -2,7 +2,6 @@
 	display: flex;
 	justify-content: space-between;
 	flex: 1;
-	margin: 0 8px 0 8px;
 }
 
 .level {
@@ -10,10 +9,11 @@
 	border-color: white;
 	border-style: solid;
 	width: 100%;
-	height: 8px;
+	height: 6px;
 	background-color: #ecf0f1;
 	text-align: center;
 	margin: 0 1px 0 1px;
+	border-radius: 2px;
 }
 
 .success {
