--- a/src/gui/components/widgets/ProgressList.module.css
+++ b/src/gui/components/widgets/ProgressList.module.css
@@ -14,6 +14,7 @@
 	text-align: center;
 	margin: 0 1px 0 1px;
 	border-radius: 2px;
+	cursor: pointer;
 }
 
 .success {
@@ -22,4 +23,12 @@
 
 .failure {
 	background-color: #d9534f;
+}
+
+.locked {
+	cursor: not-allowed;
+}
+
+.highlight {
+	background-color: #27afd7;
 }
