--- a/src/gui/HomeScreen.module.css
+++ b/src/gui/HomeScreen.module.css
@@ -20,6 +20,8 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+	width: 100%;
+	margin-top: 16px;
 }
 
 .box {
@@ -31,24 +33,4 @@
 	text-align: center;
 	box-shadow: inset 8px 8px 8px rgba(0, 0, 0, 0.075),
 		0 0 8px rgba(200, 200, 200, 0.6);
-}
-
-.button {
-	width: 150px;
-	margin-top: 16px;
-	margin-left: 8px;
-	margin-right: 8px;
-	background: rgba(0, 0, 0, 0.5);
-	padding: 12px;
-	border: solid 1px gray;
-	border-radius: 16px;
-	font-size: small;
-	text-align: center;
-	box-shadow: inset 8px 8px 8px rgba(0, 0, 0, 0.075),
-		0 0 8px rgba(200, 200, 200, 0.6);
-	cursor: pointer;
-}
-
-.button:hover {
-	background: rgba(100, 41, 176, 0.5);
 }
