--- a/src/gui/components/widgets/Button.module.css
+++ b/src/gui/components/widgets/Button.module.css
@@ -6,6 +6,7 @@
 	margin-left: 8px;
 	margin-right: 8px;
 	background: rgba(0, 0, 0, 0.5);
+	color: white;
 	padding: 12px;
 	border: solid 1px gray;
 	border-radius: 16px;
