--- a/src/gui/SettingsModal.module.css
+++ b/src/gui/SettingsModal.module.css
@@ -2,4 +2,11 @@
 	background-color: #373737cc !important;
 	box-shadow: inset 8px 8px 8px rgba(0, 0, 0, 0.075),
 		0 0 8px rgba(200, 200, 200, 0.6);
+	user-select: none;
+}
+
+.language {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
 }
