--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -25,6 +25,16 @@ body {
 	padding: 8px;
 }
 
-.xterm-viewport {
-	overflow-y: hidden !important;
+::-webkit-scrollbar {
+	width: 12px;
+}
+
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(153, 153, 153, 0.3);
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(188, 188, 188, 0.5);
 }
