--- a/src/gui/components/CPUDebugger.module.css
+++ b/src/gui/components/CPUDebugger.module.css
@@ -6,11 +6,16 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	padding: 16px;
+	transform-origin: center;
 }
 
 .registers {
 	width: 125px !important;
-	border-radius: 8px;
 	text-align: center;
+}
+
+.name {
+	color: #9bc0e9 !important;
 }
