--- a/src/gui/components/CPUDebugger.module.css
+++ b/src/gui/components/CPUDebugger.module.css
@@ -4,11 +4,18 @@
 	color: white;
 	font-family: "Courier New", Courier, monospace;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	padding: 16px;
 	transform-origin: center;
+}
+
+.column {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .registers {
@@ -18,4 +25,11 @@
 
 .name {
 	color: #9bc0e9 !important;
+}
+
+.memory {
+	width: 0px !important;
+	margin-left: 16px !important;
+	font-size: x-small;
+	white-space: nowrap;
 }
