--- a/src/gui/components/widgets/IconButton.module.css
+++ b/src/gui/components/widgets/IconButton.module.css
@@ -1,5 +1,21 @@
 .icon {
+	cursor: pointer;
+}
+
+.inline {
 	margin-bottom: 3px;
 	margin-right: 8px;
-	cursor: pointer;
+}
+
+.rounded {
+	background: #7792b2;
+	color: #252525;
+	border-radius: 50%;
+	padding: 16px 20px 17px 20px;
+	box-shadow: inset 8px 8px 8px rgba(0, 0, 0, 0.075),
+		0 0 8px rgba(200, 200, 200, 0.6);
+}
+
+.rounded:hover {
+	background: #9bc0e9;
 }
