--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -9,7 +9,7 @@ body {
 
 	background-color: black;
 	color: white;
-	font-family: "Open Sans"
+	font-family: "Open Sans";
 }
 
 #container,
@@ -28,13 +28,36 @@ body {
 ::-webkit-scrollbar {
 	width: 12px;
 }
-
 ::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(153, 153, 153, 0.3);
 	border-radius: 10px;
 }
-
 ::-webkit-scrollbar-thumb {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(188, 188, 188, 0.5);
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+	background: #373b3e;
+}
+input[type="range"]:focus::-webkit-slider-runnable-track {
+	background: #4e565d;
+}
+input[type="range"]::-webkit-slider-thumb {
+	background: #7792b2;
+}
+input[type="range"]:focus::-webkit-slider-thumb {
+	background: #9bc0e9;
+}
+input[type="range"]::-moz-range-track {
+	background: #373b3e;
+}
+input[type="range"]:focus::-moz-range-track {
+	background: #4e565d;
+}
+input[type="range"]:focus::-moz-range-thumb {
+	background: #7792b2;
+}
+input[type="range"]::-moz-range-thumb {
+	background: #9bc0e9;
 }
