--- a/src/gui/components/CodeEditor.module.css
+++ b/src/gui/components/CodeEditor.module.css
@@ -1,5 +1,11 @@
 .container {
 	height: 100%;
+	background-color: #111111;
+	margin: 0.5px;
+}
+
+.editorContainer {
+	height: 100%;
 	position: relative;
 }
 
