--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -1,3 +1,5 @@
+/* Global */
+
 html {
 	height: 100%;
 }
@@ -17,13 +19,19 @@ body {
 	height: 100%;
 }
 
+/* CodeMirror */
+
 .cm-theme {
 	width: 100%;
 }
 
+/* Xterm.js */
+
 .xterm {
 	padding: 8px;
 }
+
+/* Custom scrollbar */
 
 ::-webkit-scrollbar {
 	width: 12px;
@@ -36,6 +44,8 @@ body {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(188, 188, 188, 0.5);
 }
+
+/* Range sliders */
 
 input[type="range"]::-webkit-slider-runnable-track {
 	background: #373b3e;
@@ -62,6 +72,8 @@ input[type="range"]::-moz-range-thumb {
 	background: #9bc0e9;
 }
 
+/* Bootstrap Tabs */
+
 .nav-tabs {
 	--bs-nav-tabs-border-width: 1px;
 	--bs-nav-tabs-border-color: #577295;
@@ -87,3 +99,21 @@ input[type="range"]::-moz-range-thumb {
 .tab-content {
 	height: calc(100% - 34px);
 }
+
+/* React Draggable Tabs */
+
+.react-tabs-container {
+	height: 34px;
+}
+
+.react-tabs-tab-close {
+	border-top: 0px;
+	border-right: 0px;
+	border-left: 0px;
+	border-bottom: 0px;
+	width: 17px;
+	height: 18px;
+	transform: translateY(-3px);
+}
+
+/* Custom */
