--- a/src/gui/components/widgets/Tab.module.css
+++ b/src/gui/components/widgets/Tab.module.css
@@ -21,6 +21,7 @@
 	border-top: 1px solid #577295;
 	border-left: 1px solid #577295;
 	border-right: 1px solid #577295;
+	border-bottom: 1px solid #577295;
 }
 
 .closeButton {
