--- a/src/gui/components/MultiFileCodeEditor.module.css
+++ b/src/gui/components/MultiFileCodeEditor.module.css
@@ -11,6 +11,8 @@
 	align-items: center;
 	background-color: #111111;
 	border-bottom: solid 1px #577295;
+	overflow: hidden;
+	scroll-behavior: smooth;
 }
 
 .content {
