Fixing eslint tooltips

--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -25,6 +25,15 @@ body {
 	width: 100%;
 }
 
+.cm-gutter-lint {
+	border-right: 1px solid #577295;
+}
+
+.cm-tooltip {
+	left: 55px !important;
+	/* // HACK: No idea what I'm doing */
+}
+
 /* Xterm.js */
 
 .xterm {
@@ -70,10 +79,4 @@ input[type="range"]:focus::-moz-range-thumb {
 }
 input[type="range"]::-moz-range-thumb {
 	background: #9bc0e9;
-}
-
-/* CodeMirror Gutters */
-
-.cm-gutter-lint {
-	border-right: 1px solid #577295;
 }
