Adding markdown parser

--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -21,6 +21,10 @@ body {
 
 /* Bootstrap */
 
+:root {
+	--bs-code-color: #c39f79;
+}
+
 .form-control {
 	background-color: #435c69 !important;
 	color: white !important;
