--- a/src/gui/components/widgets/Tab.module.css
+++ b/src/gui/components/widgets/Tab.module.css
@@ -24,6 +24,11 @@
 	border-bottom: 1px solid #577295;
 }
 
+.title {
+	overflow: hidden;
+	white-space: nowrap;
+}
+
 .closeButton {
 	margin-left: 6px;
 	margin-right: 2px;
