Adding music player and volume slider

--- a/src/gui/components/widgets/NavBar.module.css
+++ b/src/gui/components/widgets/NavBar.module.css
@@ -27,6 +27,7 @@
 	position: absolute;
 	top: -4px;
 	right: 0;
+	display: flex;
 }
 
 .text {
@@ -35,4 +36,9 @@
 
 .warning {
 	margin-left: 8px;
+}
+
+.slider {
+	width: 150px;
+	transform: translateY(-4px);
 }
