Adding volume icon to slider and removing marks

--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -34,6 +34,15 @@ body {
 	color: rgb(184, 189, 197) !important;
 }
 
+/* MUI */
+
+.volume-slider > .MuiSlider-thumb:before {
+	padding: 0 5px 0 0 !important;
+	content: "🎵" !important;
+	vertical-align: -50% !important;
+	transform: scale(0.75) !important;
+}
+
 /* CodeMirror */
 
 .cm-theme {
@@ -71,31 +80,4 @@ body {
 ::-webkit-scrollbar-thumb {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(188, 188, 188, 0.5);
-}
-
-/* Range sliders */
-
-input[type="range"]::-webkit-slider-runnable-track {
-	background: #373b3e;
-}
-input[type="range"]:focus::-webkit-slider-runnable-track {
-	background: #4e565d;
-}
-input[type="range"]::-webkit-slider-thumb {
-	background: #7792b2;
-}
-input[type="range"]:focus::-webkit-slider-thumb {
-	background: #9bc0e9;
-}
-input[type="range"]::-moz-range-track {
-	background: #373b3e;
-}
-input[type="range"]:focus::-moz-range-track {
-	background: #4e565d;
-}
-input[type="range"]:focus::-moz-range-thumb {
-	background: #7792b2;
-}
-input[type="range"]::-moz-range-thumb {
-	background: #9bc0e9;
 }
