Adding pinned files support

--- a/src/gui/components/layouts/Layout.module.css
+++ b/src/gui/components/layouts/Layout.module.css
@@ -86,3 +86,13 @@
 		filter: brightness(90%);
 	}
 }
+
+.closePinButton {
+	position: absolute;
+	right: 8px;
+	top: 8px;
+}
+
+.closePinButton:hover {
+	color: #466a8e;
+}
