--- a/src/gui/components/emulator/Screen.module.css
+++ b/src/gui/components/emulator/Screen.module.css
@@ -1,6 +1,9 @@
 .screen {
-	height: 100%;
+	height: 85%;
 
 	image-rendering: pixelated; /* webkit */
 	image-rendering: optimizespeed; /* firefox */
+
+	border: 1px solid #466a8e;
+	border-radius: 8px;
 }
