--- a/src/gui/components/emulator/Emulator.module.css
+++ b/src/gui/components/emulator/Emulator.module.css
@@ -2,6 +2,35 @@
 	width: 100%;
 	height: 100%;
 	display: flex;
+	flex-direction: column;
+}
+
+.bar {
+	width: 100%;
+	height: 42px;
+	border-width: 0 0 1px;
+	border-style: solid;
+	border-color: darkgray;
+	box-shadow: inset 8px 8px 8px rgba(0, 0, 0, 0.075),
+		0 0 8px rgba(200, 200, 200, 0.6);
+	font-family: "Courier New", Courier, monospace;
+	user-select: none;
+
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding-left: 8px;
+	padding-right: 8px;
+	font-size: small;
+}
+
+.content {
+	width: 100%;
+	height: 100%;
+
+	display: flex;
+	flex: 1;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 
