Finishing chapter tree

--- a/src/gui/HomeScreen.module.css
+++ b/src/gui/HomeScreen.module.css
@@ -29,7 +29,7 @@
 	padding: 12px;
 	border: solid 1px gray;
 	border-radius: 16px;
-	font-size: x-small;
+	font-size: 11px;
 	text-align: justify;
 	box-shadow: inset 8px 8px 8px rgba(0, 0, 0, 0.075),
 		0 0 8px rgba(200, 200, 200, 0.6);
