--- a/src/gui/components/widgets/Chapter.module.css
+++ b/src/gui/components/widgets/Chapter.module.css
@@ -8,15 +8,28 @@
 	min-width: 100px;
 }
 
+.locked {
+	cursor: not-allowed;
+}
+
+.progress {
+	width: 100%;
+	margin-top: 8px;
+}
+
 .bar {
+	width: 100%;
+	background-color: #ecf0f1;
 	border-width: 1px;
 	border-color: white;
 	border-style: solid;
-	width: 100%;
-	height: 4px;
-	background-color: #ecf0f1;
-	text-align: center;
-	margin: 8px 1px 0 1px;
 	border-radius: 2px;
-	cursor: pointer;
+	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.barFill {
+	display: block;
+	height: 4px;
+	background-color: #5cb85c;
+	border-radius: 3px;
 }
