--- a/src/gui/ChapterSelectModal.module.css
+++ b/src/gui/ChapterSelectModal.module.css
@@ -16,3 +16,10 @@
 	display: flex;
 	flex-direction: row;
 }
+
+.verticalLine {
+	width: 2px;
+	height: 8px;
+	border-radius: 8px;
+	background: white;
+}
