--- a/src/gui/components/emulator/Emulator.module.css
+++ b/src/gui/components/emulator/Emulator.module.css
@@ -56,3 +56,16 @@
 	border: 1px solid #466a8e;
 	border-radius: 8px;
 }
+
+.message {
+	width: 100%;
+	height: 100%;
+	font-family: monospace;
+	font-size: x-large;
+	user-select: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-left: 32px;
+	padding-right: 32px;
+}
