--- a/src/gui/components/emulator/Emulator.module.css
+++ b/src/gui/components/emulator/Emulator.module.css
@@ -36,6 +36,11 @@
 	flex-direction: column;
 }
 
+.units {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
 .content {
 	width: 100%;
 	height: 100%;
@@ -55,6 +60,13 @@
 
 	border: 1px solid #466a8e;
 	border-radius: 8px;
+}
+
+.dragMessage {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	margin-left: 8px;
+	margin-right: 8px;
 }
 
 .message {
