Adding emulator restart message when the code changes

--- a/src/gui/components/emulator/Emulator.module.css
+++ b/src/gui/components/emulator/Emulator.module.css
@@ -81,3 +81,11 @@
 	padding-left: 32px;
 	padding-right: 32px;
 }
+
+.warning {
+	font-family: monospace;
+	user-select: none;
+	margin-bottom: 8px;
+	cursor: pointer;
+	color: #e29d07;
+}
