--- a/src/gui/components/emulator/EmulatorRunner.module.css
+++ b/src/gui/components/emulator/EmulatorRunner.module.css
@@ -41,7 +41,20 @@
 	white-space: nowrap;
 }
 
+.unitGroup {
+	display: flex;
+	flex-direction: row;
+}
+
+.mappersUnit {
+	height: fit-content;
+	align-self: center;
+	margin-left: 8px;
+	margin-right: 8px;
+}
+
 .dragMessage {
+	font-size: x-small;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	margin-left: 8px;
