Adding toast and save file error handling

--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -176,3 +176,12 @@ body {
 .tooltip:has(.memoryTooltip):hover {
 	opacity: 0.1 !important;
 }
+
+/* Hot Toasts */
+
+.toaster-wrapper > div {
+	display: none !important;
+}
+.toaster-wrapper > div:first-child {
+	display: flex !important;
+}
