--- a/src/gui/ChapterSelectModal.module.css
+++ b/src/gui/ChapterSelectModal.module.css
@@ -5,6 +5,12 @@
 	user-select: none;
 }
 
+.floating {
+	position: absolute;
+	top: 16px;
+	right: 16px;
+}
+
 .levelMap {
 	display: flex;
 	flex-direction: column;
