--- a/src/gui/components/emulator/GameStreamer.module.css
+++ b/src/gui/components/emulator/GameStreamer.module.css
@@ -48,14 +48,19 @@
 	width: 100%;
 	height: 100%;
 
-	animation: noise 5s infinite, zoomin 10s;
-	/* transform: scale(1.3); */
+	animation: noise 5s infinite;
+}
+
+.zoom {
+	animation: zoomin, zoomloop infinite;
+	animation-duration: 6s, 5s;
+	animation-delay: 0s, 6s;
+	transform: scale(1.3);
 }
 
 @keyframes noise {
 	0% {
 		filter: brightness(100%) contrast(100%) saturate(100%);
-		/* transform: scale(1.3); */
 	}
 	10% {
 		filter: brightness(98%) contrast(102%) saturate(98%);
@@ -71,7 +76,6 @@
 	}
 	50% {
 		filter: brightness(102%) contrast(98%) saturate(102%);
-		/* transform: scale(1.31); */
 	}
 	60% {
 		filter: brightness(100%) contrast(100%) saturate(100%);
@@ -87,13 +91,33 @@
 	}
 	100% {
 		filter: brightness(100%) contrast(100%) saturate(100%);
-		/* transform: scale(1.3); */
 	}
 }
 
 @keyframes zoomin {
 	0% {
-		/* transform: scale(1); */
+		transform: scale(1);
+	}
+	25% {
+		transform: rotateZ(-10deg) scale(1.1);
+	}
+	75% {
+		transform: rotateZ(10deg) scale(1.2);
+	}
+	100% {
+		transform: rotateZ(0) scale(1.3);
+	}
+}
+
+@keyframes zoomloop {
+	0% {
+		transform: scale(1.3);
+	}
+	50% {
+		transform: scale(1.31);
+	}
+	100% {
+		transform: scale(1.3);
 	}
 }
 
