Adding indicator to levels that unlock games

--- a/src/gui/components/widgets/ProgressList.module.css
+++ b/src/gui/components/widgets/ProgressList.module.css
@@ -45,3 +45,9 @@
 .highlight {
 	background-color: #27afd7;
 }
+
+.unlocksGame:before {
+	content: "👾" !important;
+	position: relative;
+	top: -5px;
+}
