--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -41,6 +41,10 @@ body {
 	pointer-events: none;
 }
 
+.blink {
+	animation: blinker 0.5s step-start infinite;
+}
+
 @keyframes shake {
 	0% {
 		transform: translate(1px, 1px) rotate(0deg);
@@ -74,6 +78,12 @@ body {
 	}
 	100% {
 		transform: translate(1px, -2px) rotate(-1deg);
+	}
+}
+
+@keyframes blinker {
+	50% {
+		opacity: 0;
 	}
 }
 
