--- a/src/gui/components/emulator/VideoTester.module.css
+++ b/src/gui/components/emulator/VideoTester.module.css
@@ -6,10 +6,12 @@
 }
 
 .column {
-	width: 50%;
+	flex: 1;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	text-align: center;
 }
 
 .title {
