--- a/src/gui/components/emulator/EmulatorRunner.module.css
+++ b/src/gui/components/emulator/EmulatorRunner.module.css
@@ -55,6 +55,7 @@
 
 .dragMessage {
 	font-size: x-small;
+	line-height: normal;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	margin-left: 8px;
