--- a/src/gui/components/emulator/EmulatorRunner.module.css
+++ b/src/gui/components/emulator/EmulatorRunner.module.css
@@ -7,7 +7,7 @@
 
 .bar {
 	width: 100%;
-	height: 41.5px; /* (tied to HorizontalDragList.js and Tab.module.css) */
+	min-height: 41.5px; /* (tied to HorizontalDragList.js and Tab.module.css) */
 	border-width: 0 0 1px;
 	border-style: solid;
 	border-color: darkgray;
