Starting image diff feature

--- a/src/gui/components/widgets/IconButton.module.css
+++ b/src/gui/components/widgets/IconButton.module.css
@@ -11,6 +11,13 @@
 	color: #466a8e;
 }
 
+.inlinenomargin {
+}
+
+.inlinenomargin:hover {
+	color: #466a8e;
+}
+
 .disabled {
 	background: #929292 !important;
 	cursor: not-allowed;
