--- a/src/gui/components/widgets/ImageDiffModal.module.css
+++ b/src/gui/components/widgets/ImageDiffModal.module.css
@@ -1,3 +1,10 @@
+.modalContent {
+	background-color: #373737cc !important;
+	box-shadow: inset 8px 8px 8px rgba(0, 0, 0, 0.075),
+		0 0 8px rgba(200, 200, 200, 0.6);
+	user-select: none;
+}
+
 .options {
 	display: flex;
 	flex-direction: row;
