--- a/src/gui/components/widgets/LevelHistoryModal.module.css
+++ b/src/gui/components/widgets/LevelHistoryModal.module.css
@@ -14,6 +14,7 @@
 	margin-bottom: 8px;
 	display: flex;
 	justify-content: space-between;
+	width: 100%;
 }
 
 .current {
@@ -26,5 +27,7 @@
 }
 
 .time {
+	text-align: right;
 	font-size: x-small;
+	margin-bottom: 8px;
 }
