--- a/src/gui/components/widgets/ProgressList.module.css
+++ b/src/gui/components/widgets/ProgressList.module.css
@@ -51,3 +51,17 @@
 	position: relative;
 	top: -5px;
 }
+
+.tooltip {
+	text-align: center;
+}
+
+.unlocksText {
+	color: gray;
+	font-size: x-small;
+}
+
+.unlockableName {
+	color: #466a8e;
+	font-size: x-small;
+}
