MarkdownView can now parse and show dictionary entries

--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -124,6 +124,14 @@ body {
 	color: #f57e3a;
 }
 
+.dictionary-link {
+	color: #d48f72;
+}
+
+.dictionary-link:hover {
+	color: #fab08f;
+}
+
 /* Bootstrap */
 
 :root {
