Updating dictionary link colors, using javascript highlighter when possible

--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -121,7 +121,7 @@ body {
 /* Dictionary entries */
 
 .dictionary-entry-name {
-	color: #d4d5de;
+	color: #9db5dc;
 }
 
 .dictionary-entry-alt-names {
