--- a/src/gui/components/emulator/GameStreamer.module.css
+++ b/src/gui/components/emulator/GameStreamer.module.css
@@ -42,15 +42,13 @@
 }
 
 .video {
+	width: 100%;
 	height: 100%;
-	margin-top: 8px;
-	margin-bottom: 8px;
-	margin-left: auto;
-	margin-right: auto;
-	aspect-ratio: 1;
+	margin: 0;
+	border: none;
+	border-radius: 0;
 	overflow: hidden;
-	border: 4px dashed #577295;
-	border-radius: 8px;
+	background: black;
 }
 
 .stream {
