--- a/src/gui/components/emulator/GameStreamer.module.css
+++ b/src/gui/components/emulator/GameStreamer.module.css
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	animation: fadein 5s;
+	image-rendering: pixelated;
 }
 
 @keyframes fadein {
@@ -49,6 +50,7 @@
 	border-radius: 0;
 	overflow: hidden;
 	background: black;
+	image-rendering: pixelated;
 }
 
 .stream {
@@ -56,26 +58,27 @@
 	width: 100%;
 	height: 100%;
 
-	animation: noise 5s infinite;
+	animation: noise 5s infinite, zoomloop 5s infinite;
+	image-rendering: pixelated;
 }
 
 .zoom {
 	animation: zoomin, zoomloop infinite;
-	animation-duration: 3s, 5s;
-	animation-delay: 0s, 3s;
-	transform: scale(1.3);
+	animation-duration: 0s, 5s;
+	animation-delay: 0s, 0s;
+	transform: scale(1);
 }
 
 .megazoom {
 	animation: megazoomin 1s;
-	transform: scale(1.8) translateX(-24px) translateY(24px);
+	transform: scale(1.8) translateX(-24px) translateY(70px);
 }
 
 .megazoomout {
 	animation: megazoomout, zoomloop infinite;
 	animation-duration: 1s, 5s;
 	animation-delay: 0s, 1s;
-	transform: scale(1.3);
+	transform: scale(1);
 }
 
 @keyframes noise {
@@ -83,28 +86,28 @@
 		filter: brightness(100%) contrast(100%) saturate(100%);
 	}
 	10% {
-		filter: brightness(98%) contrast(102%) saturate(98%);
+		filter: brightness(99%) contrast(101%) saturate(99%);
 	}
 	20% {
-		filter: brightness(102%) contrast(98%) saturate(102%);
+		filter: brightness(101%) contrast(99%) saturate(101%);
 	}
 	30% {
 		filter: brightness(100%) contrast(100%) saturate(100%);
 	}
 	40% {
-		filter: brightness(98%) contrast(102%) saturate(98%);
+		filter: brightness(99%) contrast(101%) saturate(99%);
 	}
 	50% {
-		filter: brightness(102%) contrast(98%) saturate(102%);
+		filter: brightness(101%) contrast(99%) saturate(101%);
 	}
 	60% {
 		filter: brightness(100%) contrast(100%) saturate(100%);
 	}
 	70% {
-		filter: brightness(98%) contrast(102%) saturate(98%);
+		filter: brightness(99%) contrast(101%) saturate(99%);
 	}
 	80% {
-		filter: brightness(102%) contrast(98%) saturate(102%);
+		filter: brightness(101%) contrast(99%) saturate(101%);
 	}
 	90% {
 		filter: brightness(100%) contrast(100%) saturate(100%);
@@ -115,47 +118,38 @@
 }
 
 @keyframes zoomin {
-	0% {
-		transform: scale(1);
-	}
-	25% {
-		transform: rotateZ(-10deg) scale(1.2);
-	}
-	75% {
-		transform: rotateZ(10deg) scale(1.25);
-	}
 	100% {
-		transform: rotateZ(0) scale(1.3);
+		transform: scale(1);
 	}
 }
 
 @keyframes zoomloop {
 	0% {
-		transform: scale(1.3);
+		transform: scale(1);
 	}
 	50% {
-		transform: scale(1.31);
+		transform: scale(1.01);
 	}
 	100% {
-		transform: scale(1.3);
+		transform: scale(1);
 	}
 }
 
 @keyframes megazoomin {
 	0% {
-		transform: scale(1.3) translateX(0) translateY(0);
+		transform: scale(1) translateX(0) translateY(0);
 	}
 	100% {
-		transform: scale(1.8) translateX(-24px) translateY(24px);
+		transform: scale(1.8) translateX(-24px) translateY(70px);
 	}
 }
 
 @keyframes megazoomout {
 	0% {
-		transform: scale(1.8) translateX(-24px) translateY(24px);
+		transform: scale(1.8) translateX(-24px) translateY(70px);
 	}
 	100% {
-		transform: scale(1.3) translateX(0) translateY(0);
+		transform: scale(1) translateX(0) translateY(0);
 	}
 }
 
