Fixing button margin in LevelHistoryModal

--- a/src/gui/components/widgets/LevelHistoryModal.module.css
+++ b/src/gui/components/widgets/LevelHistoryModal.module.css
@@ -12,6 +12,8 @@
 
 .level {
 	margin-bottom: 8px;
+	margin-left: 0;
+	margin-right: 0;
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
