FIX: Centering react-diff-viewer

--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -299,3 +299,11 @@ code {
 .ImageDiff__after {
 	box-sizing: content-box;
 }
+
+/* react-diff-viewer */
+/* // HACK: Coupled to current version. */
+.css-1ri4lr5-diff-container > tbody {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
