--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -21,6 +21,12 @@ body {
 	height: 100%;
 }
 
+.screen {
+	width: 100%;
+	height: 100%;
+	border: none;
+}
+
 .embed-image {
 	display: flex;
 	justify-content: center;
