--- a/src/gui/components/Debugger.module.css
+++ b/src/gui/components/Debugger.module.css
@@ -5,5 +5,9 @@
 	justify-content: center;
 	align-items: center;
 	height: 100%;
-	pointer-events: none;
+}
+
+.imgui {
+	width: 100%;
+	height: 100%;
 }
