--- a/src/gui/components/emulator/EmulatorRunner.module.css
+++ b/src/gui/components/emulator/EmulatorRunner.module.css
@@ -108,3 +108,10 @@
 .label {
 	margin-right: 4px;
 }
+
+.integration {
+	display: flex;
+	flex: 1;
+	justify-content: center;
+	align-items: center;
+}
