--- a/src/gui/theme/theme.css
+++ b/src/gui/theme/theme.css
@@ -52,6 +52,23 @@ body {
 
 /* Effects */
 
+.quickflash {
+	animation: flash 0.5s ease-in-out;
+	animation-iteration-count: 1;
+}
+
+@keyframes flash {
+	0% {
+		filter: brightness(1);
+	}
+	50% {
+		filter: brightness(2);
+	}
+	100% {
+		filter: brightness(1);
+	}
+}
+
 .earthquake {
 	animation: shake 0.5s;
 	animation-iteration-count: infinite;
