UX: Removing light flicker when a NEEES game stream is zoomed in

--- a/src/gui/components/emulator/GameStreamer.module.css
+++ b/src/gui/components/emulator/GameStreamer.module.css
@@ -192,6 +192,10 @@
 	animation: lightflicker 3s infinite;
 }
 
+.megazoom .pointLight {
+	animation: none;
+}
+
 @keyframes lightflicker {
 	0% {
 		opacity: 0;
